tests/paczka1/small_fuzzy/28809407.err
Error in line 10: A576 S883 -5,6
Error in line 5: cqdMLFpnLC7 A285 23,8
